<resources>
    <string name="app_name">billyPOS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="btn_cart_total">%1$s items = %2$s Lek.</string>
    <string name="payment_card_total_error">Payment with card cannot be bigger than invoice total</string>
    <string name="failed_to_storn">Failed to storn this invoice</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="network_unavailable">Network not available</string>
    <string name="app_version_name">POS app v1.0.1</string>
    <string name="auth_incorrect_details">Incorrect details, please check Email and Password</string>
    <string name="pos">Invoicing</string>
    <string name="items">Items</string>
    <string name="transactions">Transactions</string>
    <string name="logo">logo</string>
    <string name="demo_price">100.09</string>
    <string name="demo_zero_price">0.0</string>
    <string name="demo_item_name">Sheqer</string>
    <string name="demo_item_category">Ushqimore</string>
    <string name="checkout">Checkout</string>
    <string name="categories_and_subcategories">Categories and Subcategories</string>
    <string name="operators">Operators</string>
    <string name="action_settings">Settings</string>
    <string name="demo_item_subCategory">Perime</string>
    <string name="demo_barCode">12345678654</string>
    <string name="demo_cost">80.09</string>
    <string name="demo_itemname">Item Name</string>
    <string name="item_category">Category</string>
    <string name="item_subcategory">Subcategory</string>
    <string name="item_price">Item Price</string>
    <string name="item_price_without_discount">Item Price Without Discount</string>
    <string name="item_price_with_discount">Item Price With Discount</string>
    <string name="unit_price">Unit Price</string>
    <string name="discount">Discount</string>
    <string name="double_price_preview">0.00</string>
    <string name="discount_error">Discount cannot be bigger than 100%</string>
    <string name="item_total_error">Total cannot be bigger that item price</string>
    <string name="total_price">Total Price</string>
    <string name="item_price_with_vat">Item Price With Vat</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="item_cost">Item Cost</string>
    <string name="times_quantity">x</string>
    <string name="save">Save</string>
    <string name="title_activity_transaction_details">TransactionDetailsActivity</string>
    <string name="saved">Saved</string>
    <string name="print_receipt">Print</string>
    <string name="start_new_sale">Start new sale</string>
    <string name="all_transactions">All Transactions</string>
    <string name="all_items">Items</string>
    <string name="sales_in_last_30_days">Sales in last 30 days</string>
    <string name="from">from</string>
    <string name="transaction">transaction</string>
    <string name="cancel_sale">Storno</string>
    <string name="print">Print</string>
    <string name="cash">Cash</string>
    <string name="quantity">Quantity:</string>
    <string name="demo_quantity">20</string>
    <string name="remove_item">Remove item</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="title_activity_item_details">Details</string>
    <string name="syncs">SYNCS</string>
    <string name="created">CREATED</string>
    <string name="invoice">Invoice # %s</string>
    <string name="total_of_invoices">Total Orders</string>
    <string name="nr_transactions">No. Transactions</string>
    <string name="status">Status</string>
    <string name="clear">Clear</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sync_header">You can sync all latest data when you click below</string>
    <string name="sync_header_title">Sync</string>
    <string name="sync_tool">Sync tool</string>
    <string name="demo_invoice_no">Invoice #1092</string>
    <string name="demo_company_name">Kangaroo</string>
    <string name="demo_print_overview">2 items (Qty.: 66)</string>
    <string name="demo_total">Total: ALL798.00</string>
    <string name="demo_date">August 22, 2019 1:59 PM</string>
    <string name="print_receipt_via_bluetooth">Print via Bluetooth</string>
    <string name="logout">Logout</string>
    <string name="logout_key">logout_key</string>
    <string name="account_key">account_key</string>
    <string name="print_overview">%1$s items (Qty:.%2$s)</string>
    <string name="total">Total: ALL%1$s</string>
    <string name="appDetails">Detaje të aplikacionit</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="sync_now">Sync Now</string>
    <string name="sync_key">sync_key</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">Dialog Msg</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_day">Start Day</string>
    <string name="cash_balance">Cash balance</string>
    <string name="balance_on_desk">Amount</string>
    <string name="cash_balance_withdraw">Withdraw</string>
    <string name="cash_balance_addfunds">Funds</string>
    <string name="cash_balance_open_day">Open day</string>
    <string name="demo_cash_desc">Sales</string>
    <string name="sales_today">Today\'s sales</string>
    <string name="cash_today">Today\'s cash</string>
    <string name="add">Add</string>
    <string name="add_item">ADD ITEM</string>
    <string name="add_operator">ADD OPERATOR</string>
    <string name="msg_amount_grater_than_total_available">Ops!! Amount value is grater than current balance.</string>
    <string name="balance_type_balance">Deposit</string>
    <string name="balance_type_in">Money IN</string>
    <string name="balance_type_out">Money OUT</string>
    <string name="transaction_state_reversed">Storno</string>
    <string name="transaction_state_not_fiscalized">Not Fiscalized</string>
    <string name="transaction_state_fiscalized">Fiscalized</string>
    <string name="choose_printer">Choose Bluetooth printer</string>
    <string name="choose_printer_usb">Choose USB printer </string>
    <string name="choose_type_printer">Choose type of printer </string>
    <string name="storno">Storno</string>
    <string name="today_sales">Today Sales</string>
    <string name="total_sales">Total Sales</string>
    <string name="this_invoice_is_reversed">This invoice is cancelled</string>
    <string name="cancellation_of">View cancelled invoice</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="you_received">Received:</string>
    <string name="demo_change">Change: ALL 340</string>
    <string name="change">Change:</string>
    <string name="total_invoice">Total of invoice:</string>
    <string name="payment">Payment</string>
    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_svoucher">Voucher</string>
    <string name="payment_method_order">Order</string>
    <string name="payment_method_nr_svoucher">Nr. Voucher</string>
    <string name="payment_method_cc">Credit Card</string>
    <string name="sync_items">Sync Items</string>
    <string name="sync_categories">Sync Categories</string>
    <string name="sync_transactions">Sync Transactions</string>
    <string name="sync_cash_balanc">Sync Cash Balance</string>
    <string name="sync_entity_point">Sync Entity Point</string>
    <string name="sync_all">Sync Everything</string>
    <string name="sync_key_all">sync_key_all</string>
    <string name="sync_key_items">sync_key_items</string>
    <string name="sync_key_categories">sync_key_categories</string>
    <string name="sync_key_transactions">sync_key_transactions</string>
    <string name="sync_key_cash">sync_key_cash</string>
    <string name="sync_key_entity_point">sync_key_entity_point</string>
    <string name="po">Yes</string>
    <string name="sync_all_text">Do you want to sync all?</string>
    <string name="sync_product">Do you want to sync items?</string>
    <string name="sync_category">Do you want to sync categories?</string>
    <string name="sync_transaction">Do you want to sync transactions?</string>
    <string name="sync_cash">Do you want to sync cash balance?</string>
    <string name="sync_entity_msg">Do you want to sync entity point?</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="attention">Attention!</string>
    <string name="yes">Yes</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Desc</string>
    <string name="fiscalize_invoice">Fiscalize Invoice</string>
    <string name="edit_invoice">Edit Invoice</string>
    <string name="pick_a_digital_key">Choose digital key</string>
    <string name="transaction_saved_offline">No internet conenction! This transaction is not fiscalized.</string>
    <string name="this_is_not_fiscalized">This invoice is not fiscalized</string>
    <string name="invoice_fiscalized_successfully">Invoice is fiscalized successfully</string>
    <string name="invoice_storn_successfully">Invoice is storn successfully</string>
    <string name="info_title">Info</string>
    <string name="are_you_sure_to_storno_invoice">Are you sure to Storno/Reverse this invoice?</string>
    <string name="are_you_sure_to_fiscalize_invoice">Are you sure you want to Fiscalize this invoice?</string>
    <string name="choose_lang">Language</string>
    <string name="print_category">Print Configurations</string>
    <string name="test_printer_communication">Test Printer</string>
    <string name="fiscalisation_header_title">Fiscalisation Configurations</string>
    <string name="fiscalisation_certificate">Digital Certificate</string>
    <string name="fiscalisation_certificate_pin">Certificate PIN</string>
    <string name="fiscalisation_device_register">Register Device</string>
    <string name="enable_auto_print_invoice">Enable AUTO PRINT for Invoicing</string>
    <string name="check_license">Check license</string>
    <string name="license_key">Enter \nLicense key</string>
    <string name="hint_license_key">license key here</string>
    <string name="next">Next</string>
    <string name="digital_certificate_setup">Digital \nCertificate setup</string>
    <string name="hint_pin_certificate">enter certificate pin</string>
    <string name="hint_certificate">select certificate location</string>
    <string name="print_nuis">NUIS: </string>
    <string name="print_address">Address: </string>
    <string name="customer_name">Customer Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="sync_customers">Sync Customers</string>
    <string name="license_key_valid">License key is valid</string>
    <string name="sync_and_backup">Synchronisation and Backup</string>
    <string name="go_back">Go back</string>
    <string name="sync_operators">Sync Operators</string>
    <string name="sync_key_operators">sync_key_operators</string>
    <string name="export_unfiscalised">Export te pa fiskalizuara</string>
    <string name="usb_printer">USB</string>
</resources>