<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="transactionBody"
            type="com.wind.billypos.view.model.TransactionBody" />

    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@color/white">

    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/itemQuantity"
        android:layout_alignParentStart="true"
        android:textColor="@color/gray_800"
        android:text="@{ String.valueOf(transactionBody.quantity) }"
        tools:text="@string/demo_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/itemQuantity"
        android:id="@+id/itemQuantityLbl"
        android:textColor="@color/gray_700"
        android:text="@string/times_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/itemQuantityLbl"
        android:id="@+id/itemName"
        android:textSize="14sp"
        android:textColor="@color/gray_800"
        android:text="@{ transactionBody.itemName }"
        tools:text="@string/demo_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/itemPrice"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/gray_800"
        android:text="@{ String.valueOf(transactionBody.totalWithVat) }"
        tools:text="@string/demo_price"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

</layout>