<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wind.billypos.view.ui.customer.AddCustomerFragment">
    <data>

        <variable
            name="addCustomerViewModel"
            type="com.wind.billypos.view.ui.customer.viewmodel.AddCustomerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:theme="@style/AppBarOverlay_Green"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerNUIS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/print_nuis"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:inputType="textCapSentences"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/print_address"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/customerCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_dark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>



            <ProgressBar
                android:layout_marginTop="32dp"
                android:visibility="gone"
                android:id="@+id/loadingSyncCustomer"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/colorAccent"
                android:layout_width="36dp"
                android:layout_height="36dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>